[package]
name = "ions"
version = "0.1.0"
authors = ["Jose Salazar <znx3p0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
peg = "0.6"
serde_json = "1.0"
